[gd_scene load_steps=5 format=3 uid="uid://dfacf81f8uece"]

[ext_resource type="Script" path="res://addons/HTNDomainManager/PluginSystem/DomainPanel/DomainLineManager.gd" id="1_tyo6u"]
[ext_resource type="Texture2D" uid="uid://b261vuqbyde61" path="res://addons/HTNDomainManager/PluginSystem/Icons/Trash.svg" id="2_qn0jb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p2wno"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 0.372549, 0.372549, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_881es"]

[node name="DomainLine" type="HBoxContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tyo6u")

[node name="DeleteButton" type="Button" parent="."]
layout_mode = 2
tooltip_text = "WARNING: This will delete the domain and graph save files.
This is NOT recoverable."
theme_override_styles/hover = SubResource("StyleBoxFlat_p2wno")
icon = ExtResource("2_qn0jb")

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_881es")

[node name="LoadButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Click to load this domain."

[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="LoadButton" to="." method="_on_load_button_pressed"]
